refactor: 정렬을 question sorter 말고 도메인 클래스에서 진행
- 도메인 필드에 order가 있으므로 도메인 로직이라고 판단